--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.17.1",
     "file-saver": "^2.0.2",
     "hbs": "^4.1.1",
+    "inherits": "^2.0.4",
     "json-loader": "^0.5.4",
     "mongoose": "^5.6.10",
     "morgan": "^1.10.0",
